Products page completed

--- a/src/products.html
+++ b/src/products.html
@@ -351,7 +351,7 @@
                     <thead class="thead1">
                       <tr>
                         <th>Parameters</th>
-                        <th>P10 Indoor</th>
+                        <th>P10 Outdoor</th>
                 </tr>
                     </thead>
                     <tbody>
@@ -369,7 +369,7 @@
                   </tr>
                   <tr>
                         <th class="th1">LED Life</th>
-                        <td>HOUR</td>
+                        <td>10000</td>
                   </tr>
                   <tr>
                         <th class="th1">Module Dimension (mm)</th>
@@ -377,15 +377,15 @@
                   </tr>
                   <tr>
                         <th class="th1">Module Weight (Kg)</th>
-                        <td>38</td>
+                        <td>45</td>
                   </tr>
                   <tr>
                       <th class="th1">Power Consumption (W) / Module</th>
-                        <td>580</td>
+                        <td>800</td>
                   </tr>
                   <tr>
                       <th class="th1">Input Power</th>
-                        <td>270V AC</td>
+                        <td>130-270V AC</td>
                   </tr>
                   <tr>
                       <th class="th1">Best Viewing Distance (Feet)</th>
@@ -393,15 +393,15 @@
                   </tr>
                   <tr>
                       <th class="th1">Viewing Angle</th>
-                        <td>60°</td>
+                        <td>Horizontal</td>
                   </tr>
                   <tr>
                       <th class="th1">Brightness (NIT)</th>
-                        <td>6000</td>
+                        <td>9000</td>
                   </tr>
                   <tr>
                       <th class="th1">Operating Temperature</th>
-                        <td>0°C - 70°C</td>
+                        <td>0°C - 80°C</td>
                   </tr>
                   <tr>
                       <th class="th1">IP Grade</th>
@@ -409,7 +409,7 @@
                   </tr>
                   <tr>
                       <th class="th1">Scanning</th>
-                        <td>1:8</td>
+                        <td>1:4</td>
                   </tr>
               </tbody>
             </table>
@@ -434,78 +434,80 @@
       <div class="modal-header">
         <div class="table1Head container" align="left"><b>Features</b></div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+          <span id="x" aria-hidden="true">X</span>
         </button>
       </div>
       <div class="modal-body">
 
         <div class="container feat1" align="center">
-          <table class="table highlight">
+          <table class="table table1 highlight">
                     <thead class="thead1">
                       <tr>
                         <th>Parameters</th>
-                        <th>P10 Indoor</th>
+                        <th>P16 Outdoor</th>
                 </tr>
                     </thead>
                     <tbody>
                       <tr>
                 <th class="th1">Pixel Pitch</th>
-                        <td>10</td>
-                  </tr>
-                  <tr>
+                        <td>16</td>
+                </tr>
+                      <tr>
                         <th class="th1">Pixel Density</th>
-                        <td>10000</td>
-                  </tr>
-                  <tr>
+                        <td>3906</td>
+                </tr>
+                      <tr>
                         <th class="th1">Pixel Configuration</th>
-                        <td>3-In-1 RGB SMD</td>
-                  </tr>
-                  <tr>
+                        <td>1R 1G 1B</td>
+              </tr>
+                      <tr>
                         <th class="th1">LED Life</th>
-                        <td>HOUR</td>
-                  </tr>
-                  <tr>
+                        <td>10000 HOUR </td>
+              </tr>
+              <tr>
                         <th class="th1">Module Dimension (mm)</th>
-                        <td>960 x 960</td>
-                  </tr>
-                  <tr>
+                        <td>1280 x 1280</td>
+              </tr>
+              <tr>
                         <th class="th1">Module Weight (Kg)</th>
-                        <td>38</td>
-                  </tr>
-                  <tr>
+                        <td>50</td>
+              </tr>
+              <tr>
                       <th class="th1">Power Consumption (W) / Module</th>
-                        <td>580</td>
-                  </tr>
-                  <tr>
+                        <td>1000</td>
+                </tr>
+              <tr>
                       <th class="th1">Input Power</th>
-                        <td>270V AC</td>
-                  </tr>
-                  <tr>
+                        <td>130V - 270V AC</td>
+                </tr>
+              <tr>
                       <th class="th1">Best Viewing Distance (Feet)</th>
-                        <td>10</td>
-                  </tr>
-                  <tr>
+                        <td>16</td>
+              </tr>
+              <tr>
                       <th class="th1">Viewing Angle</th>
-                        <td>60°</td>
-                  </tr>
-                  <tr>
+                        <td>110°</td>
+              </tr>
+              <tr>
                       <th class="th1">Brightness (NIT)</th>
-                        <td>6000</td>
-                  </tr>
-                  <tr>
+                        <td>12000</td>
+              </tr>
+              <tr>
                       <th class="th1">Operating Temperature</th>
-                        <td>0°C - 70°C</td>
-                  </tr>
-                  <tr>
+                        <td>0°C - 80°C</td>
+              </tr>
+
+              <tr>
                       <th class="th1">IP Grade</th>
-                        <td>IP54(Back)/ IP54(Front)</td>
-                  </tr>
-                  <tr>
+                        <td>IP65(Back)/ IP66(Front)</td>
+              </tr>
+
+              <tr>
                       <th class="th1">Scanning</th>
-                        <td>1:8</td>
-                  </tr>
-              </tbody>
-            </table>
+                        <td>1:4</td>
+              </tr>
+                    </tbody>
+                  </table>
         </div>
 
 
@@ -515,14 +517,6 @@
   </div>
 </div>
 <!-- ----------------------------------------------modal table end-------------------------------------------------- -->
-
-
-
-
-
-
-
-
 
 <!-- <div class="table1Head container" align="left"><b>Features</b></div>
 <div class="container feat1" align="center">
@@ -771,73 +765,95 @@
   </div>
 <!-- END OF FLEXBOX GALLERY -->
 
+<div class="container clickH" data-toggle="modal" data-target="#modal5" align="center">Click Here For Features</div>
 
 
+<!-- -------------------------------------------modal table 4-------------------------------------------------- -->
+<div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modaltab1" role="document">
+    <div class="modal-content modCont1">
+      <div class="modal-header">
+        <div class="table1Head container" align="left"><b>Features</b></div>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span id="x" aria-hidden="true">x</span>
+        </button>
+      </div>
+      <div class="modal-body">
 
-<div class="table1Head container" align="center"><b>Features</b></div>
-<div class="container feat1" align="center">
-  <div class="table-responsive">
-            <table class="table highlight">
-              <thead class="thead1">
-                <tr>
-                  <th>Parameters</th>
-                  <th>LED VMS Controller</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th class="th1">Input Power</th>
-                  <td>5V DC</td>
-                </tr>
-                <tr>
-                  <th class="th1" >Operating Temperature</th>
-                  <td>-20°C ~ +85°C</td>
-                </tr>
-                <tr>
-                  <th class="th1">Storage Temperature</th>
-                  <td>-40°C ~ +85°C</td>
-                </tr>
-                <tr>
-                  <th class="th1">Supported LED Matrix</th>
-                  <td>192 x 128</td>
-                </tr>
-				<tr>
-                  <th class="th1">Supported Scanning</th>
-                  <td>1:4</td>
-				</tr>
-				<tr>
-	              <th class="th1">Refresh Rate</th>
-                  <td>Upto 700Hz</td>
-				</tr>
-				<tr>
-                  <th class="th1">CPU</th>
-                  <td>ARM Cortex M4 @ 180MHz</td>
-                </tr>
-				<tr>
-	              <th class="th1">Internal Flash</th>
-                  <td>Upto 1MB/td&gt;
-               	</td></tr>
-				<tr>
-	              <th class="th1">Internal RAM</th>
-                  <td>Upto 256 KB</td>
-                </tr>
-				<tr>
-	              <th class="th1">External Flash</th>
-                  <td>Upto 64 MB</td>
-                </tr>
-				<tr>
-	              <th class="th1">Wired Communication</th>
-                  <td>10/100/1000 MBPS LAN</td>
-                </tr>
-				<tr>
-	              <th class="th1">Wireless Communication</th>
-                  <td>Wi-Fi, GPRS</td>
-                </tr>
+        <div class="container feat1" align="center">
+          <div class="table-responsive">
+                    <table class="table highlight">
+                      <thead class="thead1">
+                        <tr>
+                          <th>Parameters</th>
+                          <th>LED VMS Controller</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th class="th1">Input Power</th>
+                          <td>5V DC</td>
+                        </tr>
+                        <tr>
+                          <th class="th1" >Operating Temperature</th>
+                          <td>-20°C ~ +85°C</td>
+                        </tr>
+                        <tr>
+                          <th class="th1">Storage Temperature</th>
+                          <td>-40°C ~ +85°C</td>
+                        </tr>
+                        <tr>
+                          <th class="th1">Supported LED Matrix</th>
+                          <td>192 x 128</td>
+                        </tr>
+        				<tr>
+                          <th class="th1">Supported Scanning</th>
+                          <td>1:4</td>
+        				</tr>
+        				<tr>
+        	              <th class="th1">Refresh Rate</th>
+                          <td>Upto 700Hz</td>
+        				</tr>
+        				<tr>
+                          <th class="th1">CPU</th>
+                          <td>ARM Cortex M4 @ 180MHz</td>
+                        </tr>
+        				<tr>
+        	              <th class="th1">Internal Flash</th>
+                          <td>Upto 1MB/td&gt;
+                       	</td></tr>
+        				<tr>
+        	              <th class="th1">Internal RAM</th>
+                          <td>Upto 256 KB</td>
+                        </tr>
+        				<tr>
+        	              <th class="th1">External Flash</th>
+                          <td>Upto 64 MB</td>
+                        </tr>
+        				<tr>
+        	              <th class="th1">Wired Communication</th>
+                          <td>10/100/1000 MBPS LAN</td>
+                        </tr>
+        				<tr>
+        	              <th class="th1">Wireless Communication</th>
+                          <td>Wi-Fi, GPRS</td>
+                        </tr>
 
-              </tbody>
-            </table>
-          </div>
+                      </tbody>
+                    </table>
+                  </div>
+        </div>
+
+
+      </div>
+      </div>
+    </div>
+  </div>
 </div>
+<!-- ----------------------------------------------modal table end-------------------------------------------------- -->
+
+<!-- <div class="table1Head container" align="center"><b>Features</b></div> -->
+
 
 <!-- Device USP -->
 <div class="usp1Head container-fluid">Universal Selling Point</div>
