--- a/src/service.html
+++ b/src/service.html
@@ -58,7 +58,7 @@
               <a class="nav-link js-scroll-trigger" href="career.html"><b>Career</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact"><b>Contact</b></a>
+              <a class="nav-link js-scroll-trigger" href="contact.html"><b>Contact</b></a>
             </li>
 
           </ul>
