Landing page changes implemented

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
 </div>
 
-<img src="public/images/img1.png" id="i0">
+<!-- <img src="public/images/img1.png" id="i0"> -->
 
 <div class="section2">
 <!-- <div id="about" align="center">Who are We?</div>
