Contact form updated

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </div>
 
 
-  <div class="conatiner fluid cont2" align="center">
+  <div class="container fluid cont2" align="center">
     <div class="container-fluid cont2a">Embedded Designs Services</div>
     <div class="container-fluid cont2b">Converting Concept To Reality</div>
     <hr>
