--- a/src/contact.html
+++ b/src/contact.html
@@ -80,7 +80,13 @@
   <!-- ----------------------------------content------------------------ -->
 <div class="container-fluid">
   <div class="row content" >
-    <div class="col-sm-4 img"></div>
+
+    <!-- Map -->
+    <div class="col-sm-4 img">
+        <iframe id="gmap" src="https://maps.google.com/maps?q=Embedded%20Designs%20Services%20India%20Private%20Limited%3Cbr%3E%20%20%20%20%20%20%20D1A%2FA3%2C%20Sewa%20Marg%2C%20D-Block%20Janakpuri%3Cbr%3E%20%20%20%20%20%20%20New%20Delhi%20-%20110058%2C%20INDIA&t=k&z=13&ie=UTF8&iwloc=&output=embed" ></iframe>
+    </div>
+    <!-- End of map -->
+
     <div class="col-sm-8 cont" align="center">
       <div class="head" align="center">Contact Us<br></div>
       <br>
@@ -91,16 +97,13 @@
 
         <form id="formSpree" method="POST" action="https://formspree.io/mitra.abhirupa@gmail.com">
           <input class="inp" type="email" name="email" placeholder="Your email"><br>
+          <input class="inp" type="text" name="text" placeholder="Your name"><br>
+          <input class="inp" type="number" name="phone" placeholder="Your phone number"><br>
           <textarea class="inp"  name="message" placeholder="Test Message"></textarea><br>
           <button type="submit">Send</button>
         </form>
       </div>
-      <div class="row address" align="center">
-        Embedded Designs Services India Pvt. Ltd.<br>EDS , Delhi<br>D1A/A3, Block – D1A<br>Opposite Meri College,<br>
-        Janakpuri, New Delhi -110058<br>
-        Tel: +91 11 45151188, Mob: + 91 9810165326<br>
-        Email: info@eds-india.com<br>
-      </div>
+      
 
       <!-- ------------ -->
 
@@ -109,6 +112,7 @@
   </div>
 </div>
 <!-- ----------------------------------content------------------------ -->
+
 
 <!-- ----------------------Footer--------------------- -->
 <footer class="pagefooter">
