News page updated

--- a/src/news.html
+++ b/src/news.html
@@ -2,8 +2,6 @@
 <html lang="en" class="app">
 
 <head>
-
-
       <meta charset="UTF-8">
       <title>EDS-INDIA</title>
       <meta charset="UTF-8">
@@ -25,7 +23,7 @@
 
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Days+One|Roboto+Slab" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -81,16 +79,51 @@
 
 <div id="mySidenav" class="sidenav">
   <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="#">AIS-140 Approval</a>
+  <a href="#">ISO scope change</a>
+  <a href="#">Filled Patent for Microcontroller Based LED Video Walls</a>
+  <a href="#">20 Most Promising Design House</a>
+  <a href="#">ISO 9001-2015 Certified Company</a>
 </div>
 
 <h2>Animated Sidenav Example</h2>
 <p>Click on the element below to open the side navigation menu.</p>
 
 <!-- <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span> -->
+<div class="container news">
+  <h1>AIS-140 Approval</h1>
+  <div class="content">EDS-INDIA's AIS-140 Vehicle Location Tracking devices tested Successfully at ICAT, With all test completed within 20 days</div>
+</div>
+<div class="container news">
+  <h1>ISO scope change</h1>
+  <div class="content">EDS-INDIA launched Personal Tracking Devices and Scope Change Audit for ISO completed Successfully<br>Scope - design, manufacturing and service of vehicle tracking system, personal tracking system, asset tracking unit, led display boards, power supply & electronics design support services.</div>
+</div>
+<div class="container news">
+  <h1>Filled Patent for Microcontroller Based LED Video Walls</h1>
+  <div class="content">EDS India team filled its first patent for "Driving of RGB LED Video Wall using Microcontroller"
+<br>Patent application number 201811030008 at IPO
+
+Received documents purporng be to an application for patent numbered 201811030008 dated 09-08-2018 by Roy, Santanu of 214, Ashoka Enclave part iii, sector 35, Faridabad – 121003, Haryana, India.
+Relang to Microcontroller based control of light emitting diode (LED) video walls.<br><br>
+<strong>Abstract</strong><br>
+The present disclosure relates to a display device, and, more specifically, to a system and method for driving a true color light emitting diode (LED) video wall by integration of a microcontroller. An aspect of the present disclosure relates to video display system having a plurality of light-emitting diodes (LEDs). The video display system can include a module controller (1) configured to receive one or more instructions from at least one controlling device to generate an image using a set of said plurality of light-emitting diodes (LEDs). The module controller (1) can communicate data to said plurality of light-emitting diodes (LEDs) using Transmission Control Protocol (TCP) protocol and generates a User Datagram Protocol (UDP) pulse to synchronize said plurality of light-emitting diodes (LEDs) to change frame at a same instance.
+
+
+</div>
+</div>
+<div class="container news">
+  <h1>20 Most Promising Design House</h1>
+  <div class="content">The surge of energy-efficient electronics market is forcing manufacturers to innovate new devices consuming less energy in a data driven and informed way. Withstanding this pressure takes big wheels, often new ones, as attested by the evanescing of several established electronics giants. Manifesting an exemplary way of surviving this surge & need for continuous innovation and thriving forward against the odds is a Delhi-based design specialist - Embedded Designs Services India Pvt. Ltd. (EDS India) by perfectly blending young energetic minds along with industry veterans who boasts of more than two decades of industry experience.
+
+Marshalled under the strong leadership of Santanu Roy (Managing Director), who brings in more than 20 years of Electronics Design expertise churned out from global
+ semiconductor giants like STMicroelectronics and Pentair Inc. through his decisive roles, EDS India (ISO 9001-2015 certified) has grown three folds in the last two years, inscribing success anecdote across India and even beyond the boundaries of our country.</div>
+</div>
+<div class="container news">
+  <h1>ISO 9001-2015 CERTIFIED COMPANY</h1>
+  <div class="content">EDS-INDIA Is now a TUV-SUD Certified ISO 9001-2015 Company
+
+Scope - design, manufacturing and service of vehicle tracking system, led display boards, power supply & electronics design support services</div>
+</div>
 
 <script>
 function openNav() {
