--- a/src/news.html
+++ b/src/news.html
@@ -17,7 +17,10 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
       <!-- Javascripts -->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script
+			  src="https://code.jquery.com/jquery-3.4.1.js"
+			  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+			  crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
@@ -79,26 +82,28 @@
 
 <div id="mySidenav" class="sidenav">
   <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
-  <a href="#">AIS-140 Approval</a>
-  <a href="#">ISO scope change</a>
-  <a href="#">Filled Patent for Microcontroller Based LED Video Walls</a>
-  <a href="#">20 Most Promising Design House</a>
-  <a href="#">ISO 9001-2015 Certified Company</a>
+  <a  id="a01">AIS-140 Approval</a>
+  <a  id="a02">ISO scope change</a>
+  <a  id="a03">Filled Patent for Microcontroller Based LED Video Walls</a>
+  <a  id="a04">20 Most Promising Design House</a>
+  <a  id="a05">ISO 9001-2015 Certified Company</a>
 </div>
 
 <h2>Animated Sidenav Example</h2>
 <p>Click on the element below to open the side navigation menu.</p>
-
 <!-- <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span> -->
-<div class="container news">
+<div class="container-fluid news" id="c01"align="justify">
+  <div class="date">February 15, 2019</div>
   <h1>AIS-140 Approval</h1>
   <div class="content">EDS-INDIA's AIS-140 Vehicle Location Tracking devices tested Successfully at ICAT, With all test completed within 20 days</div>
 </div>
-<div class="container news">
+<div class="container-fluid news" id="c02"align="justify">
+  <div class="date">September 24, 2018</div>
   <h1>ISO scope change</h1>
   <div class="content">EDS-INDIA launched Personal Tracking Devices and Scope Change Audit for ISO completed Successfully<br>Scope - design, manufacturing and service of vehicle tracking system, personal tracking system, asset tracking unit, led display boards, power supply & electronics design support services.</div>
 </div>
-<div class="container news">
+<div class="container-fluid news" id="c03" align="justify">
+  <div class="date">August 9, 2018</div>
   <h1>Filled Patent for Microcontroller Based LED Video Walls</h1>
   <div class="content">EDS India team filled its first patent for "Driving of RGB LED Video Wall using Microcontroller"
 <br>Patent application number 201811030008 at IPO
@@ -111,14 +116,13 @@ The present disclosure relates to a display device, and, more specifically, to a
 
 </div>
 </div>
-<div class="container news">
+<div class="container-fluid news" id="c04" align="justify">
   <h1>20 Most Promising Design House</h1>
   <div class="content">The surge of energy-efficient electronics market is forcing manufacturers to innovate new devices consuming less energy in a data driven and informed way. Withstanding this pressure takes big wheels, often new ones, as attested by the evanescing of several established electronics giants. Manifesting an exemplary way of surviving this surge & need for continuous innovation and thriving forward against the odds is a Delhi-based design specialist - Embedded Designs Services India Pvt. Ltd. (EDS India) by perfectly blending young energetic minds along with industry veterans who boasts of more than two decades of industry experience.
-
 Marshalled under the strong leadership of Santanu Roy (Managing Director), who brings in more than 20 years of Electronics Design expertise churned out from global
  semiconductor giants like STMicroelectronics and Pentair Inc. through his decisive roles, EDS India (ISO 9001-2015 certified) has grown three folds in the last two years, inscribing success anecdote across India and even beyond the boundaries of our country.</div>
 </div>
-<div class="container news">
+<div class="container-fluid news " id="c05" align="justify">
   <h1>ISO 9001-2015 CERTIFIED COMPANY</h1>
   <div class="content">EDS-INDIA Is now a TUV-SUD Certified ISO 9001-2015 Company
 
@@ -155,7 +159,33 @@ openNav();
 
 </footer>
 <!-- ----------------------Footer end--------------------- -->
-
+<script>
+$("#a05").click(function() {
+    $('html, body').animate({
+        scrollTop: $("#c05").offset().top
+    }, 1000);
+});
+$("#a04").click(function() {
+    $('html, body').animate({
+        scrollTop: $("#c04").offset().top
+    }, 1000);
+});
+$("#a03").click(function() {
+    $('html, body').animate({
+        scrollTop: $("#c03").offset().top
+    }, 1000);
+});
+$("#a02").click(function() {
+    $('html, body').animate({
+        scrollTop: $("#c02").offset().top
+    }, 1000);
+});
+$("#a01").click(function() {
+    $('html, body').animate({
+        scrollTop: $("#c01").offset().top
+    }, 1000);
+});
+</script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.0.3/vue-resource.min.js'></script>
 
