About page completed

--- a/src/about.html
+++ b/src/about.html
@@ -18,7 +18,7 @@
 
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Days+One|Roboto+Slab" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
 
 
 </head>
@@ -76,70 +76,83 @@
 
 
 <!-- Carousel -->
-<header>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-      <!-- Slide One - Set the background image for this slide in the line below -->
-      <div class="carousel-item active slide2" >
-        <div class="carousel-caption">
-          <p class="lead">Managing Director<br><b>Mr. Shantanu Roy</b><br>____<br>Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development</p>
-        </div>
-      </div>
-        <!-- Slide Two - Set the background image for this slide in the line below -->
-      <div class="carousel-item slide3">
-        <div class="carousel-caption ">
-          <p class="lead">Hardware Design<br><b>Mr. Naveen Dagar</b><br>____<br> More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.</p>
-        </div>
-      </div>
-        <!-- Slide Three - Set the background image for this slide in the line below -->
-      <div class="carousel-item slide1" >
-        <div class="carousel-caption ">
-          <p class="lead">Software Design<br><b>Mr. Dileep Singh</b><br>____<br>With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.</p>
-        </div>
-      </div>
-        <!-- Slide Four - Set the background image for this slide in the line below -->
-      <div class="carousel-item  slide1" >
-        <div class="carousel-caption ">
-          <p class="lead">Operations<br><b>Mr. Vijay Kumar</b><br>____<br>With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-  </div>
-
-  <div class="main-text">
-    <div class="col-md-12 text-center">
-        <h1>
-            Who are WE?<br>____</h1>
-        <h3>
-          <br>
-          Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
-          Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
-          electronics product development domain under one roof, starting right from Architecture Design to complete Hardware, Software & Mobile Apps
-        </h3>
-        <div class="team">
-            <!-- <h2>Our team</h2> -->
-    </div>
-</div>
-</header>
 
 <!-- Carousel Ends -->
 
 
+<div class="container-fluid contMain center">
+  <div class="main" align="center">
+    Who are WE?
+  </div>
+</div>
+<div class="container about_content" align="justify">
+  Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
+  Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
+  electronics product development domain under one roof, starting right from Architecture Design to complete Hardware, Software & Mobile Apps.
+  <br>
+  We at EDS India provide solutions in field of embedded electronics, power electronics, analog and digital design starting from the paper
+  concept to the working prototypes. With an average industry experience of over 15 years our team is motivated and capable to provide robust solution for our customers and partners. We along with our partners have setups accross India thus can extend our solution at pan India levels, we at EDS India are capable to provide support to our end customers across all geographical locations in India.
+</div>
+<div class="container-fluid ">
+  <div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-2">
+      <div class="card c0" style="width: 18rem;">
+        <!-- <img src="..." class="card-img-top" alt="..."> -->
+        <div class="card-body">
+          <h5 class="card-title"><b>Our Mission</b></h5>
+          <p class="card-text">Our Mission is to provide robust technology solutions to our valued customers and securing the best position in the eyes of our customers and employees.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card c1" style="width: 18rem;">
+        <!-- <img src="..." class="card-img-top" alt="..."> -->
+        <div class="card-body">
+          <h5 class="card-title"><b>Our Vision</b></h5>
+          <p class="card-text">Our Vision is to be a single source solution provider enabling our customers rise the ladder of success.</p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="card c2" style="width: 18rem;">
+        <!-- <img src="..." class="card-img-top" alt="..."> -->
+        <div class="card-body">
+          <h5 class="card-title"><b>Our Values</b></h5>
+          <p class="card-text">We strongly believe that our success lies in the growth of our employees, as elucidated by our mission statement. </p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+    </div>
 
+    <div class="col-sm-3"></div>
+  </div>
+</div>
+
+<div class="container-fluid contMain0 center0">
+  <div class="main" align="center">
+    Our Team
+  </div>
+</div>
+
+<div class="container-fluid team">
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="lead"><strong>Managing Director</strong><br><b>Mr. Shantanu Roy</b><br>____<br>Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development</div>
+    </div>
+    <div class="col-sm-3">
+      <p class="lead">Hardware Design<br><b>Mr. Naveen Dagar</b><br>____<br> More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.</p>
+    </div>
+    <div class="col-sm-3">
+      <p class="lead">Software Design<br><b>Mr. Dileep Singh</b><br>____<br>With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.</p>
+    </div>
+    <div class="col-sm-3">
+      <p class="lead">Operations<br><b>Mr. Vijay Kumar</b><br>____<br>With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.</p>
+    </div>
+  </div>
+</div>
 
 <!-- <div class="section2"> -->
 <!-- <div id="about" align="center">Who are We?</div>
@@ -256,7 +269,7 @@ concept to the working prototypes. With an average industry experience of over 1
 </marquee>
 </div>
 </div> -->
-</div>
+<!-- </div> -->
 <footer class="pagefooter">
   <div class="row ">
     <div class="col-sm-4">
