--- a/src/about.html
+++ b/src/about.html
@@ -85,6 +85,7 @@
     Who are WE?
   </div>
 </div>
+<div class="container-fluid top_main">
 <div class="container about_content" align="justify">
   Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
   Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
@@ -130,7 +131,7 @@
     <div class="col-sm-3"></div>
   </div>
 </div>
-
+</div>
 <div class="container-fluid contMain0 center0">
   <div class="main" align="center">
     Our Team
@@ -138,19 +139,32 @@
 </div>
 
 <div class="container-fluid team">
+  <!-- <div class="container" -->
   <div class="row">
-    <div class="col-sm-3">
-      <div class="lead"><strong>Managing Director</strong><br><b>Mr. Shantanu Roy</b><br>____<br>Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development</div>
+    <div class="container mem0 about_content" align="center">
+      <b>Managing Director<br> Mr. Santanu Roy</b><br>
+      <div align="justify">Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development.
+        Prior to EDS India, Mr. Santanu worked for semiconductor giants like ST Microelectronics where he handled team of FAE’s across Pan India supporting customers of ST Microelectronics and also worked for World leaders like Pentair Inc where by designing and re-engineering products of Pentair Water solution for India, United States and European markets.
+        Mr Roy has a B.E (Electronics & Tele-Communication) degree along with PGDBA (Operations) from Symbiosis Pune.
+      </div>
+
     </div>
-    <div class="col-sm-3">
-      <p class="lead">Hardware Design<br><b>Mr. Naveen Dagar</b><br>____<br> More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.</p>
+
+    <div class="row about_content">
+      <div class="col-sm-4 mem1" id="mem10" align="center">
+        <b>Hardware Design<br> Mr. Naveen Dagar</b>
+        <div align="justify">More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.</div>
+      </div>
+      <div class="col-sm-4 mem1" id="mem11" align="center">
+        <b>Operations<br> Mr. Vijay Kumar</b>
+        <div align="justify">With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.</div>
+      </div>
+      <div class="col-sm-4 mem1" align="center">
+        <b>Software Design<br> Mr. Dileep Singh</b>
+        <div align="justify"> With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.</div>
+      </div>
     </div>
-    <div class="col-sm-3">
-      <p class="lead">Software Design<br><b>Mr. Dileep Singh</b><br>____<br>With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.</p>
-    </div>
-    <div class="col-sm-3">
-      <p class="lead">Operations<br><b>Mr. Vijay Kumar</b><br>____<br>With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.</p>
-    </div>
+
   </div>
 </div>
 
