Carousel made responsive

--- a/White/index.html
+++ b/White/index.html
@@ -85,26 +85,26 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <!-- Slide One - Set the background image for this slide in the line below -->
-      <div class="carousel-item active slide1" >
-        <div class="carousel-caption ">
-          <img id="slide1logo" class="img-responsive" src="public/images/logo1.png">
 
-          <p class="lead">EDS India is a group of experienced industry veterans providing technology solutions to its partners, established with the aim to enrich our valued customers with today’s growing technology demands. </p>
+      <div class="carousel-item active slide1" >
+        <div class="carousel-caption">
+          <img id="slide1logo" class="img-responsive" src="public/images/logo1.png">
+          <p class="lead">EDS India is a group of experienced industry veterans providing technology solutions to its partners, established with the aim to enrich our valued customers with today’s growing technology demands.</p>
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item slide2" >
         <div class="carousel-caption">
-          <img id="slide1logo" class="img-responsive" src="public/images/logo2.png">
+          <img id="slide2logo" class="img-responsive" src="public/images/logo2.png">
           <p class="lead">We offer professional design services which include hardware and software development, customizable product designs, Systems Engineering and Solutions to assist our end customers grow in this high speed techno-commercial era. </p>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
-      <div class="carousel-item slide3" s>
+      <div class="carousel-item slide3" >
         <div class="carousel-caption ">
-          <img id="slide1logo" class="img-responsive" src="public/images/logo3.png">
+          <img id="slide3logo" class="img-responsive" src="public/images/logo3.png">
 
-          <p class="lead">EDS-India uses latest technologies to market, through its rich knowledge acquired by research and developments. It operates in various domains of communication, wireless, control system, networking, embedded systems, LED lighting & single/true colour LED Displays. EDS-India is a group of highly experienced and motivated technocrats. </p>
+          <p class="lead">EDS-India uses latest technologies to market, through its rich knowledge acquired by research and developments. It operates in various domains of communication, wireless, embedded systems, LED lighting & single/true colour LED Displays. </p>
         </div>
       </div>
     </div>
@@ -169,7 +169,7 @@
         <div class="row">
 
           <div class="col-sm-3">
-            <div class="card c1">
+            <div class="card c1 hover-active">
               <div class="card-body">
 
               </div>
@@ -181,7 +181,7 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="card c3">
+            <div class="card c3 hover-active">
               <div class="card-body">
 
               </div>
@@ -194,7 +194,7 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="card c4">
+            <div class="card c4 hover-active">
               <div class="card-body ">
 
               </div>
@@ -206,7 +206,7 @@
           </div>
 
           <div class="col-sm-3 ">
-            <div class="card c2">
+            <div class="card c2 hover-active">
               <div class="card-body">
 
               </div>
@@ -233,7 +233,7 @@
     <div class="container-fluid cont2a">Embedded Designs Services</div>
     <div class="container-fluid cont2b">Converting Concept To Reality</div>
     <hr>
-    <img id="bow" src="public/images/lbr1.png">
+    <!-- <img id="bow" src="public/images/lbr1.png"> -->
     <div class="container-fluid cont2c">Our Success Stories</div>
     <div class="row typing" align="center">
       <div class="col-sm-2" align="left"></div>
