About page sorted

--- a/White/index.html
+++ b/White/index.html
@@ -19,6 +19,7 @@
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Days+One|Roboto+Slab" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
 
 
 </head>
@@ -120,6 +121,15 @@
 </header>
 
 <!-- Carousel Ends -->
+
+
+<div class="container-fluid contMain center">
+  <div class="main" align="center">
+    <div class="container-fluid">Embedded Designs Services</div>
+    <div class="container-fluid cont2b">Converting Concept To Reality</div>
+  </div>
+</div>
+
 <div class="info container-fluid">
   <!-- <div class="row">
     <div class="col0 col-sm-4">
@@ -160,6 +170,8 @@
       </div>
     </div>
   </div> -->
+
+
 
   <div class="container-fluid">
     <div class="wwdHead">What We Do<br><b>____</b></div>
@@ -230,8 +242,7 @@
 
 
   <div class="container fluid cont2" align="center">
-    <div class="container-fluid cont2a">Embedded Designs Services</div>
-    <div class="container-fluid cont2b">Converting Concept To Reality</div>
+
     <hr>
     <!-- <img id="bow" src="public/images/lbr1.png"> -->
     <div class="container-fluid cont2c">Our Success Stories</div>
