--- a/White/src/about.html
+++ b/White/src/about.html
@@ -98,7 +98,7 @@
 <div class="container-fluid ">
   <div class="row">
     <div class="col-sm-3"></div>
-    <div class="col-sm-2">
+    <div class="col-sm-2" align="center">
       <div class="card c0" style="width: 18rem;">
         <!-- <img src="..." class="card-img-top" alt="..."> -->
         <div class="card-body">
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-2" align="center">
       <div class="card c1" style="width: 18rem;">
         <!-- <img src="..." class="card-img-top" alt="..."> -->
         <div class="card-body">
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-2" align="center">
       <div class="card c2" style="width: 18rem;">
         <!-- <img src="..." class="card-img-top" alt="..."> -->
         <div class="card-body">
