--- a/White/src/service.html
+++ b/White/src/service.html
@@ -82,11 +82,12 @@
   <!--effect #1 -->
   <div class="slider-container">
     <div class="flexbox-slider flexbox-slider-1">
-      <div class="flexbox-slide" align="center">
+
+      <div class="flexbox-slide">
         <img src="../public/images/fb1.jpg" alt="Slide Image">
-        <h1 align="center" class="blockHead"><br><br><b>Hardware Designs Services</b></h1>
-        <div class="text-block" align="center">
-          <!-- <h3>Slide #1 is here</h3> -->
+        <h1 align="center" class="blockHead"><b>Hardware Designs</b></h1>
+        <div class="text-block">
+          <!-- <h3>Slide #2 is here</h3> -->
           <div class="text" align="left">
             <p> Hardware design services includes designing of electronics hardware from the concept/paper design to working PCBs. We have successfully designed & delivered high frequency Multi-Layer PCBs (up to 8 Layers) with BGA components and dual side high density placement PCBs. By making use of appropriate resources we can deliver working PCBs in a week’s time.<br>
 <br>
@@ -98,7 +99,7 @@ We provide complete Hardware solution development starting from the Block Level 
       </div>
       <div class="flexbox-slide">
         <img src="../public/images/fb2.jpg" alt="Slide Image">
-        <h1 align="center" class="blockHead"><br><br><b>Software Development & Designs</b></h1>
+        <h1 align="center" class="blockHead"><b>Software Development</b></h1>
         <div class="text-block">
           <!-- <h3>Slide #2 is here</h3> -->
           <div class="text" align="left">
@@ -109,7 +110,7 @@ We provide complete Hardware solution development starting from the Block Level 
       </div>
       <div class="flexbox-slide">
         <img src="../public/images/fb3.jpg" alt="Slide Image">
-        <h1 align="center" class="blockHead"><br><br><b>Android Application Development</b></h1>
+        <h1 align="center" class="blockHead"><b>Android Application Development</b></h1>
         <div class="text-block">
           <!-- <h3>Slide #3 is here</h3> -->
           <div class="text" align="left">
@@ -120,7 +121,7 @@ We provide complete Hardware solution development starting from the Block Level 
       </div>
       <div class="flexbox-slide">
         <img src="../public/images/fb4.jpg" alt="Slide Image">
-        <h1 align="center" class="blockHead"><br><br><b>Eng. Design Consultancy Services</b></h1>
+        <h1 align="center" class="blockHead"<b>Design Consultancy Services</b></h1>
         <div class="text-block">
           <!-- <h3>Slide #4 is here</h3> -->
           <div class="text" align="left">
@@ -132,7 +133,7 @@ We provide complete Hardware solution development starting from the Block Level 
       </div>
       <div class="flexbox-slide">
         <img src="../public/images/fb5.jpg" alt="Slide Image">
-        <h1 align="center" class="blockHead"><br><br><b>Product Certification and Approvals</b></h1>
+        <h1 align="center" class="blockHead"<b>Product Certification</b></h1>
         <div class="text-block">
           <!-- <h3>Slide #5 is here</h3> -->
           <div class="text" align="left">
